--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: "Feature Request"
-description: "Suggest an idea for the deer.social app."
+description: "Suggest an idea for the social.daniela.lol app."
 labels: ["feature-request"]
 body:
   - type: markdown
