--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -1,41 +1,84 @@
 name: Release deer
-on: workflow_dispatch # could be weekly/etc or on a separate branch.
+
+on:
+  workflow_dispatch:
+
+env:
+  NODE_VERSION: '20'
+  JAVA_VERSION: '17'
 
 jobs:
-  build-android:
-    name: Build deer for Android
+  deploy-pages:
+    name: Deploy to Cloudflare Pages
     runs-on: ubuntu-latest
-    outputs:
-      apk-path: ${{ steps.upload-artifact.outputs.artifact-path }}
+    environment: production
+    permissions:
+      contents: read
+      deployments: write
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: yarn
-
-      - uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: temurin
-          cache: gradle
-
-      - uses: android-actions/setup-android@v3
-
-      - uses: extractions/setup-just@v2
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Compile internationalization messages
+        run: yarn intl:compile 
+
+      - name: Build web project
+        run: yarn build-web
+
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy ./dist --project-name=deer-social
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+  build-android:
+    name: Build deer for Android
+    needs: deploy-pages
+    runs-on: ubuntu-latest
+    outputs:
+      apk-path: ${{ steps.upload-artifact.outputs.artifact-path }}
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: yarn
+      
+      - uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: 'temurin'
+          cache: gradle
+      
+      - uses: android-actions/setup-android@v3
+      
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      
       - name: Copy example build settings
         run: |
           cp .env.example .env
           cp google-services.json.example google-services.json
-
+      
       - name: Build APK
-        run: just dist-build-android-gradle
-
+        run: yarn android:prod 
+      
       - name: Upload APK artifact
         id: upload-artifact
         uses: actions/upload-artifact@v4
@@ -47,24 +90,26 @@ jobs:
     name: Create GitHub Release
     needs: build-android
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/') 
+    
     steps:
       - name: Download APK artifact
         uses: actions/download-artifact@v4
         with:
           name: android
           path: .
-
+      
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: deer-v${{ github.run_number }}
-          release_name: deer v${{ github.run_number }}
+          tag_name: ${{ github.ref_name }}
+          release_name: deer.social ${{ github.ref_name }}
           draft: false
           prerelease: false
-
+      
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         env:
