--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,1 +1,21 @@
+name = "deer-social"
+pages_build_output_dir = "./dist" 
 compatibility_date = "2025-04-16"
+compatibility_flags = ["nodejs_compat"]
+
+vars = { 
+  ENVIRONMENT = "production",
+  EXPO_PUBLIC_ENV = "production"
+}
+
+[env.production]
+vars = { 
+  ENVIRONMENT = "production",
+  EXPO_PUBLIC_ENV = "production"
+}
+
+[env.preview]
+vars = { 
+  ENVIRONMENT = "preview",
+  EXPO_PUBLIC_ENV = "preview"
+}
