--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -26,9 +26,6 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'yarn'
 
-      - name: Install Wrangler
-        run: npm install -g wrangler@latest
-
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
@@ -43,7 +40,7 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy /dist --project-name=deer-social
+          command: pages deploy dist --project-name=deer-social --commit-dirty=true
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
