--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -1,5 +1,5 @@
 # Nombre del workflow
-name: Build, Release, and Deploy
+name: Release deer
 
 # Disparadores: Se ejecuta en push a 'main', en push de tags (ej. v1.0.0), o manualmente
 on:
@@ -14,7 +14,6 @@ jobs:
   # --- TAREA PARA CONSTRUIR EL APK DE ANDROID ---
   build-android:
     name: Build deer for Android
-    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     outputs:
       apk-path: ${{ steps.upload-artifact.outputs.artifact-path }}
@@ -50,7 +49,6 @@ jobs:
     name: Create GitHub Release
     needs: build-android
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Download APK artifact
         uses: actions/download-artifact@v4
@@ -81,7 +79,6 @@ jobs:
   deploy-to-cloudflare:
     name: Deploy to Cloudflare Pages
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     permissions:
       contents: read
       deployments: write
