--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -11,32 +11,40 @@ env:
   JAVA_VERSION: '17'
 
 jobs:
-  # --- TAREA PARA CONSTRUIR EL APK DE ANDROID ---
-  build-android:
+ build-android:
     name: Build deer for Android
     runs-on: ubuntu-latest
     outputs:
       apk-path: ${{ steps.upload-artifact.outputs.artifact-path }}
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 20
           cache: yarn
+
       - uses: actions/setup-java@v4
         with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'temurin'
+          java-version: 17
+          distribution: temurin
           cache: gradle
+
       - uses: android-actions/setup-android@v3
+
+      - uses: extractions/setup-just@v2
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
       - name: Copy example build settings
         run: |
           cp .env.example .env
           cp google-services.json.example google-services.json
+
       - name: Build APK
-        run: yarn build-android
+        run: just dist-build-android-gradle
+
       - name: Upload APK artifact
         id: upload-artifact
         uses: actions/upload-artifact@v4
@@ -44,7 +52,6 @@ jobs:
           name: android
           path: android/app/build/outputs/apk/release/app-release.apk
 
-  # --- TAREA PARA CREAR UN RELEASE EN GITHUB ---
   release:
     name: Create GitHub Release
     needs: build-android
@@ -55,16 +62,18 @@ jobs:
         with:
           name: android
           path: .
+
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: deer.social ${{ github.ref_name }}
+          tag_name: deer-v${{ github.run_number }}
+          release_name: deer v${{ github.run_number }}
           draft: false
           prerelease: false
+
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         env:
