--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deer.social",
-  "version": "1.109.0",
+  "version": "v4.1.1",
   "private": true,
   "engines": {
     "node": ">=18"
