--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -78,8 +78,8 @@ jobs:
         id: upload-artifact
         uses: actions/upload-artifact@v4
         with:
-          name: release-artifacts
-          path: artifacts/
+          name: deer-android-${{ github.run_number }}
+          path: android/app/build/outputs/apk/release/app-release.apk
           retention-days: 30
           if-no-files-found: error
 
