switched lande to eldr. the benchmarks rate it as sooo much better but im not sure if in actual usage it's gonna be

--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "bcp-47-match": "^2.0.3",
     "date-fns": "^2.30.0",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "eldr": "https://github.com/ayla6/eldr",
     "email-validator": "^2.0.4",
     "emoji-mart": "^5.5.2",
     "emoji-regex": "^10.4.0",
@@ -165,7 +166,6 @@
     "hls.js": "^1.6.2",
     "js-sha256": "^0.9.0",
     "jwt-decode": "^4.0.0",
-    "lande": "^1.0.10",
     "lodash.chunk": "^4.2.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
