--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "@bitdrift/react-native": "^0.6.8",
     "@braintree/sanitize-url": "^6.0.2",
     "@discord/bottom-sheet": "bluesky-social/react-native-bottom-sheet",
-    "@emoji-mart/react": "^1.1.1",
     "@expo/html-elements": "^0.12.5",
     "@expo/webpack-config": "^19.0.1",
     "@floating-ui/dom": "^1.6.3",
@@ -101,6 +100,8 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@sentry/react-native": "~6.14.0",
+    "@slidoapp/emoji-mart": "^5.8.4",
+    "@slidoapp/emoji-mart-react": "^1.1.3",
     "@tanstack/query-async-storage-persister": "^5.25.0",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-persist-client": "^5.25.0",
@@ -129,7 +130,6 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "eldr": "https://github.com/ayla6/eldr",
     "email-validator": "^2.0.4",
-    "emoji-mart": "^5.5.2",
     "emoji-regex": "^10.4.0",
     "eventemitter3": "^5.0.1",
     "expo": "53.0.11",
