--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "@sentry/react-native": "~6.20.0",
     "@slidoapp/emoji-mart": "^5.8.4",
     "@slidoapp/emoji-mart-react": "^1.1.3",
     "@tanstack/query-async-storage-persister": "^5.25.0",
@@ -230,7 +229,6 @@
     "@react-native/babel-preset": "0.81.4",
     "@react-native/eslint-config": "^0.81.4",
     "@react-native/typescript-config": "^0.81.4",
-    "@sentry/webpack-plugin": "^3.2.2",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.4.0",
@@ -300,7 +298,7 @@
       "\\.[jt]sx?$": "babel-jest"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|@discord|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|nanoid|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|normalize-url|react-native-svg|@sentry/.*|sentry-expo|bcp-47-match)"
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|@discord|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|nanoid|@react-navigation/.*|@unimodules/.*|unimodules|native-base|normalize-url|react-native-svg|bcp-47-match)"
     ],
     "modulePathIgnorePatterns": [
       "__tests__/.*/__mocks__",
