--- a/.github/workflows/deer-build.yml
+++ b/.github/workflows/deer-build.yml
@@ -34,7 +34,9 @@ jobs:
           cp google-services.json.example google-services.json
 
       - name: Build
-        run: just dist-build-android-gradle
+        run: |
+          export NODE_OPTIONS=--max-old-space-size=10240
+          just dist-build-android-gradle
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
