--- a/.github/workflows/deer-build.yml
+++ b/.github/workflows/deer-build.yml
@@ -36,8 +36,9 @@ jobs:
       - name: Build
         run: |
           export NODE_OPTIONS=--max-old-space-size=10240
+          export GRADLE_OPTS="-Dorg.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
           just dist-build-android-gradle
-
+          
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
