--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     "react-remove-scroll-bar": "^2.3.8",
     "react-responsive": "^10.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "rn-fetch-blob": "^0.12.0",
     "sonner": "^2.0.7",
     "sonner-native": "^0.21.0",
     "statsig-react-native-expo": "^4.6.1",
