--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   build-android:
     name: Build deer for Android
-    runs-on: self-hosted
+    runs-on: high-end
     outputs:
       apk-path: ${{ steps.upload-artifact.outputs.artifact-url }}
     steps:
@@ -70,11 +70,6 @@ jobs:
         env:
           GRADLE_USER_HOME: ~/.gradle
 
-      - name: Move APK to artifacts directory
-        run: |
-          mkdir -p artifacts
-          mv android/app/build/outputs/apk/release/deer-release.apk artifacts/
-
       - name: Upload APK artifact
         id: upload-artifact
         uses: actions/upload-artifact@v4
@@ -86,7 +81,7 @@ jobs:
 
   deploy-to-cloudflare:
     name: Deploy to Cloudflare Pages
-    runs-on: self-hosted
+    runs-on: low-end
     permissions:
       contents: read
       deployments: write
@@ -123,7 +118,7 @@ jobs:
   release:
     name: Create GitHub Release
     needs: build-android
-    runs-on: self-hosted
+    runs-on: high-end
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     permissions:
       contents: write
