Install dependences before doing anything because that's how it works

--- a/.github/workflows/deer-build.yml
+++ b/.github/workflows/deer-build.yml
@@ -6,6 +6,19 @@ jobs:
     name: Build deer for Android
     runs-on: high-end
     steps:
+      # System dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl wget git build-essential
+          
+      # Install Node.js and yarn
+      - name: Install Node.js
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+          sudo npm install -g yarn
+          
       - name: Checkout
         uses: actions/checkout@v4
 
