--- a/.github/workflows/deer-build.yml
+++ b/.github/workflows/deer-build.yml
@@ -12,18 +12,22 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y curl wget git build-essential
           
-      # Install Node.js and yarn
-      - name: Install Node.js
-        run: |
-          curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
-          sudo apt-get install -y nodejs
-          sudo npm install -g yarn
-          
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: yarn
+
+      - name: Install Yarn
+        run: |
+          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+          sudo apt-get update
+          sudo apt-get install -y yarn
+          yarn --version
         with:
           node-version: 20
           cache: yarn
