--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -100,6 +100,11 @@ jobs:
       contents: read
       deployments: write
     steps:
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl wget git build-essential
+          
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -108,6 +113,14 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: yarn
+
+      - name: Install Yarn
+        run: |
+          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+          sudo apt-get update
+          sudo apt-get install -y yarn
+          yarn --version
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
