--- a/.github/workflows/deer-build.yml
+++ b/.github/workflows/deer-build.yml
@@ -4,14 +4,14 @@ on: workflow_dispatch
 jobs:
   deer-build-android:
     name: Build deer for Android
-    runs-on: high-end
+    runs-on: high-end 
     steps:
       # System dependencies
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y curl wget git build-essential
-          
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -19,25 +19,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          
-      - name: Install Yarn
+
+      - name: Install Yarn (via npm for Yarn 1)
         run: |
-          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-          sudo apt-get update
-          sudo apt-get install -y yarn
+          npm install -g yarn
           yarn --version
-        with:
-          node-version: 20
-          cache: yarn
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: temurin
           cache: gradle
+
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
+
       - name: Setup just
         uses: extractions/setup-just@v2
 
@@ -54,7 +51,7 @@ jobs:
           export NODE_OPTIONS=--max-old-space-size=10240
           export GRADLE_OPTS="-Dorg.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
           just dist-build-android-gradle
-          
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
