--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -15,14 +15,13 @@ jobs:
     name: Build deer for Android
     runs-on: high-end
     outputs:
-      apk-path: ${{ steps.upload-artifact.outputs.artifact-url }}
+      apk-name: ${{ steps.upload-artifact.outputs.artifact-id }}
     steps:
-      # System dependencies
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y curl wget git build-essential
-          
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -36,10 +35,8 @@ jobs:
 
       - name: Install Yarn
         run: |
-          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-          sudo apt-get update
-          sudo apt-get install -y yarn
+          corepack enable
+          corepack prepare yarn@stable --activate
           yarn --version
 
       - name: Setup Java
@@ -70,7 +67,7 @@ jobs:
             ${{ runner.os }}-gradle-caches-
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Copy example build settings
         run: |
@@ -88,7 +85,7 @@ jobs:
         id: upload-artifact
         uses: actions/upload-artifact@v4
         with:
-          name: deer-android-${{ github.run_number }}
+          name: deer-release-apk 
           path: android/app/build/outputs/apk/release/app-release.apk
           retention-days: 30
           if-no-files-found: error
@@ -104,16 +101,14 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y curl wget git build-essential
-          
+
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Install Yarn
         run: |
-          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-          sudo apt-get update
-          sudo apt-get install -y yarn
+          corepack enable
+          corepack prepare yarn@stable --activate
           yarn --version
 
       - name: Setup Node.js
@@ -121,9 +116,9 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: yarn
-          
+
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Update browserslist database
         run: npx update-browserslist-db@latest
@@ -142,9 +137,30 @@ jobs:
           projectName: 'deer-social'
           directory: 'web-build'
 
+  collect-artifacts:
+    name: Collect Artifacts
+    needs: build-android
+    runs-on: high-end
+    steps:
+      - name: Download APK artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: deer-release-apk
+          path: ./collected_artifacts
+
+      - name: List downloaded artifacts
+        run: ls -la ./collected_artifacts/
+
+      - name: Upload collected artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-artifacts
+          path: ./collected_artifacts/*
+          retention-days: 90
+
   release:
     name: Create GitHub Release
-    needs: build-android
+    needs: [build-android, collect-artifacts]
     runs-on: high-end
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     permissions:
@@ -157,7 +173,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+          
       - name: Download release artifacts
         uses: actions/download-artifact@v4
         with:
@@ -166,10 +182,14 @@ jobs:
 
       - name: Verify artifacts
         run: |
-          if [ ! -f "./artifacts/deer-release.apk" ]; then
-            echo "Error: APK file not found in artifacts"
+          # Fixed: Check for the specific APK name uploaded by build-android
+          if [ ! -f "./artifacts/app-release.apk" ]; then
+            echo "Error: APK file (app-release.apk) not found in artifacts"
+            ls -la ./artifacts/
             exit 1
           fi
+          # Fixed: Rename the APK to the expected name for the release
+          mv "./artifacts/app-release.apk" "./artifacts/deer-release.apk"
           ls -la ./artifacts/
 
       - name: Generate release tag
@@ -178,7 +198,10 @@ jobs:
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
           else
-            echo "tag=deer-v${{ github.run_number }}" >> $GITHUB_OUTPUT
+            # Fixed: Use a more standard format for auto-generated tags if not triggered by a push to tag
+            # Or potentially skip this job entirely if not on a tag
+            # For now, using a run-number based tag name as a fallback
+            echo "tag=deer-auto-release-${{ github.run_number }}" >> $GITHUB_OUTPUT
           fi
 
       - name: Generate changelog
@@ -186,21 +209,22 @@ jobs:
         run: |
           # Get the last tag
           last_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          
-          if [ -n "$last_tag" ]; then
+
+          if [ -n "$last_tag" ] && [ "$last_tag" != "$GITHUB_SHA" ]; then
+            # Fixed: Ensure we don't compare the tag against itself
             # Generate changelog since last tag
             echo "changelog<<EOF" >> $GITHUB_OUTPUT
-            git log --pretty=format:"- %s" $last_tag..HEAD >> $GITHUB_OUTPUT
+            git log --pretty=format:"- %s" "$last_tag"..HEAD >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           else
-            # First release - use all commits
+            # First release or tag is the first commit - use all commits up to HEAD
             echo "changelog<<EOF" >> $GITHUB_OUTPUT
-            git log --pretty=format:"- %s" >> $GITHUB_OUTPUT
+            git log --pretty=format:"- %s" HEAD~1..HEAD >> $GITHUB_OUTPUT # Gets the commit that triggered the tag
             echo "EOF" >> $GITHUB_OUTPUT
           fi
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2 
         with:
           tag_name: ${{ steps.tag.outputs.tag }}
           name: 🦌 Deer Release ${{ steps.tag.outputs.tag }}
@@ -210,18 +234,18 @@ jobs:
             ./artifacts/deer-release.apk
           body: |
             ## 🦌 Deer Release ${{ steps.tag.outputs.tag }}
-            
+
             ### 📝 Changelog
             ${{ steps.changelog.outputs.changelog }}
-            
+
             ### 🔍 Build Info
             - Built from commit: ${{ github.sha }}
             - Workflow run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-            
+
             ### 📥 Downloads
             - **Android APK**: Download the `deer-release.apk` file below
             - **Web App**: Available at [deer-social.pages.dev](https://deer-social-7m8.pages.dev)
-            
+
             ### 🔒 Security
             This release is signed and verified. The APK is built in a clean environment with reproducible steps.
         env:
