--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -1,5 +1,5 @@
-name: Release deer
 
+name: Deer Release
 on:
   workflow_dispatch:
   push:
@@ -8,20 +8,12 @@ on:
 env:
   NODE_VERSION: '20'
   JAVA_VERSION: '17'
-  GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true -Dorg.gradle.workers.max=2"
 
 jobs:
   build-android:
     name: Build deer for Android
     runs-on: high-end
-    outputs:
-      apk-name: ${{ steps.upload-artifact.outputs.artifact-id }}
     steps:
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl wget git build-essential
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -52,22 +44,8 @@ jobs:
       - name: Setup Just
         uses: extractions/setup-just@v2
 
-      - name: Cache Gradle Wrapper
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle-wrapper.properties') }}
-
-      - name: Cache Gradle Dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-caches-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-caches-
-
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Copy example build settings
         run: |
@@ -82,34 +60,19 @@ jobs:
           GRADLE_USER_HOME: ~/.gradle
 
       - name: Upload APK artifact
-        id: upload-artifact
         uses: actions/upload-artifact@v4
         with:
-          name: deer-release-apk 
+          name: deer-release-apk
           path: android/app/build/outputs/apk/release/app-release.apk
           retention-days: 30
           if-no-files-found: error
 
-  deploy-to-cloudflare:
-    name: Deploy to Cloudflare Pages
+  build-cloudflare:
+    name: Build Web for Cloudflare
     runs-on: low-end
-    permissions:
-      contents: read
-      deployments: write
     steps:
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl wget git build-essential
-
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@stable --activate
-          yarn --version
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -117,8 +80,14 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: yarn
 
+      - name: Install Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@stable --activate
+          yarn --version
+
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Update browserslist database
         run: npx update-browserslist-db@latest
@@ -129,38 +98,17 @@ jobs:
       - name: Build Web App
         run: yarn build-web
 
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: 'deer-social'
-          directory: 'web-build'
-
-  collect-artifacts:
-    name: Collect Artifacts
-    needs: build-android
-    runs-on: high-end
-    steps:
-      - name: Download APK artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: deer-release-apk
-          path: ./collected_artifacts
-
-      - name: List downloaded artifacts
-        run: ls -la ./collected_artifacts/
-
-      - name: Upload collected artifacts
+      - name: Upload Web artifact
         uses: actions/upload-artifact@v4
         with:
-          name: release-artifacts
-          path: ./collected_artifacts/*
-          retention-days: 90
+          name: deer-web-build
+          path: web-build/
+          retention-days: 30
+          if-no-files-found: error
 
   release:
     name: Create GitHub Release
-    needs: [build-android, collect-artifacts]
+    needs: [build-android, build-cloudflare]
     runs-on: high-end
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     permissions:
@@ -173,23 +121,25 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
-      - name: Download release artifacts
+
+      - name: Download APK artifact
         uses: actions/download-artifact@v4
         with:
-          name: release-artifacts
+          name: deer-release-apk
           path: ./artifacts
 
-      - name: Verify artifacts
+      - name: Download Web artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: deer-web-build
+          path: ./web-artifacts
+
+      - name: Verify APK artifact
         run: |
-          # Fixed: Check for the specific APK name uploaded by build-android
           if [ ! -f "./artifacts/app-release.apk" ]; then
-            echo "Error: APK file (app-release.apk) not found in artifacts"
-            ls -la ./artifacts/
-            exit 1
+            echo "Error: APK file (app-release.apk) not found in artifacts"; ls -la ./artifacts/; exit 1;
           fi
-          # Fixed: Rename the APK to the expected name for the release
-          mv "./artifacts/app-release.apk" "./artifacts/deer-release.apk"
+          mv ./artifacts/app-release.apk ./artifacts/deer-release.apk
           ls -la ./artifacts/
 
       - name: Generate release tag
@@ -198,36 +148,28 @@ jobs:
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
           else
-            # Fixed: Use a more standard format for auto-generated tags if not triggered by a push to tag
-            # Or potentially skip this job entirely if not on a tag
-            # For now, using a run-number based tag name as a fallback
             echo "tag=deer-auto-release-${{ github.run_number }}" >> $GITHUB_OUTPUT
           fi
 
       - name: Generate changelog
         id: changelog
         run: |
-          # Get the last tag
           last_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-
           if [ -n "$last_tag" ] && [ "$last_tag" != "$GITHUB_SHA" ]; then
-            # Fixed: Ensure we don't compare the tag against itself
-            # Generate changelog since last tag
             echo "changelog<<EOF" >> $GITHUB_OUTPUT
             git log --pretty=format:"- %s" "$last_tag"..HEAD >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           else
-            # First release or tag is the first commit - use all commits up to HEAD
             echo "changelog<<EOF" >> $GITHUB_OUTPUT
-            git log --pretty=format:"- %s" HEAD~1..HEAD >> $GITHUB_OUTPUT # Gets the commit that triggered the tag
+            git log --pretty=format:"- %s" HEAD~1..HEAD >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           fi
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2 
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.tag.outputs.tag }}
-          name: 🦌 Deer Release ${{ steps.tag.outputs.tag }}
+          name: "🦌 Deer Release ${{ steps.tag.outputs.tag }}"
           draft: false
           prerelease: false
           files: |
@@ -247,6 +189,6 @@ jobs:
             - **Web App**: Available at [deer-social.pages.dev](https://deer-social-7m8.pages.dev)
 
             ### 🔒 Security
-            This release is signed and verified. The APK is built in a clean environment with reproducible steps.
+            This release is signed and verified. The APK is built in un entorno limpio y reproducible.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
