--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -11,15 +11,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v5.0.0
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Setup Java JDK
-        uses: actions/setup-java@v5.0.0
-        with: 
-          distribution: jdk
+          cache: yarn
+      - uses: actions/setup-java@v4
+        with:
           java-version: 17
+          distribution: temurin
+          cache: gradle
+          
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
       - name: Setup Just
